CDPipe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appflask-deploy
spec:
  selector:
    matchLabels:
      app: appflask
  replicas: 1
  template:
    metadata:
      labels:
        app: appflask
    spec:
      containers:
      - name: appflask
        # enter the path to your image, be sure to include the correct region prefix
        image: <OCIR_PATH>/app_flask:<GIT_COMMIT>   # here app_flask is repository name
        ports:
        - containerPort: 5000
      imagePullSecrets:
      # enter the name of the secret you created
      - name: ocirsecret
