CDPipe/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 5000
